docker compose file changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+  networks:
+    app-network:
+      driver: bridge
 
   frontend:
     build:
