--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       context: ./frontend
       args:
         - VITE_API_URL=${VITE_API_URL:-http://localhost:8000}
+        - VITE_CHATBOT_URL=${VITE_CHATBOT_URL:-http://localhost:8001}
     expose:
       - "3000"
     depends_on:
