--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Accept build argument for API URL
+# Accept build argument for API URL and Chatbot URL
 ARG VITE_API_URL=http://localhost:8000
+ARG VITE_CHATBOT_URL=http://localhost:8001
 
 # Install dependencies first
 COPY package*.json ./
@@ -11,8 +12,8 @@ RUN npm install --legacy-peer-deps
 # Copy source code
 COPY . .
 
-# Build the application with VITE_API_URL available during build
-RUN VITE_API_URL=$VITE_API_URL npm run build
+# Build the application with VITE_API_URL and VITE_CHATBOT_URL available during build
+RUN VITE_API_URL=$VITE_API_URL VITE_CHATBOT_URL=$VITE_CHATBOT_URL npm run build
 
 FROM node:20-alpine AS runtime
 WORKDIR /app
